# rsl-sign-recognition

./: AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml
.github/workflows/: foundation-ci.yml
docs/: architecture.md  artifact-policy.md  backlog.md  int-01-web-team-handoff-notes.md  mig-02-runtime-required-migration-governance.md  pw-01-pose-words-inference-wrapper-scope.md  pw-02-segmentation-runtime-scope.md  qa-01-smoke-test-strategy.md  roadmap.md  runtime-skeleton.md
docs/contracts/: mock-protocol-mode.md  websocket-contract-v1.md
docs/contracts/fixtures/: mock-control-ack-clear-text.json  mock-recognition-result-commit.json  mock-recognition-result-hold.json  mock-session-error-runtime-unavailable.json
src/rsl_sign_recognition/: __init__.py  asgi.py
src/rsl_sign_recognition/api/: __init__.py  dependencies.py  factory.py
src/rsl_sign_recognition/contracts/: __init__.py  websocket_v1.py
src/rsl_sign_recognition/inference/: __init__.py  pose_words.py
src/rsl_sign_recognition/pipelines/: __init__.py
src/rsl_sign_recognition/runtime/: __init__.py  artifacts.py  config.py  readiness.py  services.py  (+2 more)
tests/: conftest.py  test_pose_words_clip.py  test_pose_words_extraction.py  test_pose_words_features.py  test_pose_words_inference_wrapper.py  test_pose_words_pose_types.py  test_runtime_artifacts.py  test_runtime_shell.py  test_segmentation_decoder.py  test_segmentation_model_onnx.py  test_segmentation_streaming.py  test_ws_stream_contract.py
(+14 files in other folders)
