[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsl-sign-recognition"
version = "0.1.0"
description = "Minimal FastAPI runtime shell for the clean RSL sign-to-text repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "numpy>=1.26,<3.0",
  "uvicorn>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.4,<9.0",
]
pose-extraction = [
  "mediapipe>=0.10,<1.0",
]
segmentation = [
  "onnxruntime>=1.18,<2.0",
]
pose-words-inference = [
  "onnxruntime>=1.18,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
